--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -37,25 +37,24 @@
 
 .input {
   width: 100%;
-  height: 3rem;
-
+  height: 3.2rem;
+  display: flex;
+  align-items: center;
+  justify-items: center;
   border: 1px solid #3e3c41;
   padding: 0.87rem 0.75rem;
   border-radius: 0.5rem;
-
-  display: flex;
   margin-bottom: 1.5rem;
 }
 
 .input i {
   margin-right: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .input input {
   flex: 1;
-
   font-family: "Catamaran", sans-serif;
-
   font-size: 1rem;
   color: #b2afb6;
   background-color: transparent;
